fixed overflow of bubble selector

--- a/src/components/bubble-divider/bubble-divider.scss
+++ b/src/components/bubble-divider/bubble-divider.scss
@@ -56,7 +56,3 @@
     }
   }
 }
-
-.c-bubble-divider-children {
-  overflow: hidden;
-}
